--- a/main.html
+++ b/main.html
@@ -5,12 +5,61 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
+</head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
+<table >
+    <thead >
+      <tr>
+        <th>Part</th>
+        <th>XS</th>
+        <th>S</th>
+        <th>M</th>
+        <th>L</th>
+        <th>XL</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Waist</td>
+        <td>25</td>
+        <td>28</td>
+        <td>30</td>
+        <td>31</td>
+        <td>32</td>
+      </tr>
+      <tr>
+        <td>Chest</td>
+        <td>34</td>
+        <td>34</td>
+        <td>38</td>
+        <td>40</td>
+        <td>41</td>
+      </tr>
+      <tr>
+        <td>Sleeve</td>
+        <td>23</td>
+        <td>24</td>
+        <td>24</td>
+        <td>25</td>
+        <td>25</td>
+      </tr>
+    </tbody>
+  </table>
 
 </html>
